--- a/003.JS학습/JS2-1.변수와연산자.html
+++ b/003.JS학습/JS2-1.변수와연산자.html
@@ -254,6 +254,145 @@
             널라와 시름 한 나도 자고 니러 우니로라<br>
             ${E}
         `);
+
+      // 변수의 자리출력 연습
+
+      // 사용자이름
+      var usrName = "헨리";
+      // 오늘의날씨
+      var todayWeather = "쨍하고 맑음";
+      // 인사메세지
+      var message = "쿨하게 멋지게 자신있게";
+
+      // 화면출력
+      document.write(
+        `<br><br>
+          ${usrName}님, 안녕하세요.<br>
+          오늘의 날씨는 ${todayWeather}입니다.<br>
+          오늘도 ${message} 보내세요. <br><br>
+          `
+      );
+
+      // 변수값 변경하기
+
+      // 사용자이름
+      usrName = "제시카";
+      // 오늘의날씨
+      todayWeather = "흐리고 구름많음";
+      // 인사메세지
+      message = "나는 소중하니까";
+
+      // 화면출력
+      document.write(
+        `<br><br>
+                ${usrName}님, 안녕하세요.<br>
+                오늘의 날씨는 ${todayWeather}입니다.<br>
+                ${message}
+                `
+      );
+
+      /* 
+      [ JS의 실행순서 ]
+      1. 위에서 아래로
+      2. 이퀄 오른쪽에서 왼쪽으로
+      3. 괄호 안에서 바깥으로
+      4. 함수 바깥부터, 함수는 호출시 실행
+
+
+      [ JS의 연산자 (Operator) ]
+        - 연산자는 어떤 결과를 얻기위한 중간처리역할을 함
+
+        1. 산술연산자 (사칙연산)
+          1) 더하기 : +
+          2) 마이너스 : -
+          3) 곱하기 : *
+          4) 나누기 : /
+
+          -> 더하기 연산에 대한 결과
+            숫자+숫자=숫자
+            문자+숫자=문자
+            문자+문자=문자
+            변수+변수=변수값에 대한 더하기 연산
+
+          ->빼기, 곱하기, 나누기는
+            모두 숫자만 가능한 연산이다!
+      */
+
+      //   변수는 한번만 선언하고 한꺼번에 할당하기
+      var F = 500,
+          G = 5,
+          H = 12,
+          I = 2;
+       
+        //   변수 연산하여 출력하기
+        document.write(`
+        <h1>1. 산술연산자 : </h1>
+        ${F}+${G}*${H}/${I} =
+        ${F+G*H/I}
+        `);
+        // ${}보간법 안에 계산식 사용 가능!
+
+
+        /************************************************ 
+        2. 나머지 연산자: %
+          앞수%뒷수 -> 앞수에서 뒷수를 나눈 나머지
+          예) 숫자%2 -> 2로 나눈 나머지가 0이면 짝수
+        ************************************************/
+        document.write(`
+        <h1>2. 나머지 연산자 : </h1>
+        ${H}%${I} =
+        ${H%I}
+        `);
+
+
+        /************************************************ 
+        3. 비교연산자:
+          - 두 가지 값을 비교하여 true / false 의 결과값을 얻는 연산자
+
+            1) > : 크다(초과)
+            2) < : 작다(미만)
+            3) >= : 크거나 같다(이상)
+            4) <= : 작거나 같다(이하)
+            5) == : 같다(동등비교)
+                예) 1 == '1' -> true
+            6) != : 같지않다(동등비교)
+            7) === : 같다(동등비교-형까지비교)
+                예) 1 === '1' -> false 왜? 형이달라!
+            8) !== : 같지않다(동등비교-형까지비교)
+
+            ※ 주의사항: 비교연산자의 결과로 반드시 true / false 가 나온다!
+
+          ************************************************/
+         document.write(`
+         <h1>3. 비교연산자 : </h1>
+         1 == '1' 의 결과는? ${1 == '1'}<br>
+         1 === '1' 의 결과는? ${1 === '1'}<br>
+         5 &gt; 10 의 결과는? ${5 > 10}<br>
+         5 &lt; 10 의 결과는? ${5 < 10}<br>
+         `);
+        //  ->비교연산자를 사용한 곳에는 반드시 true/false의 결과가 출력된다.
+
+
+        /********************************************** 
+        4. 대입연산자 :
+          - 기존값에 연산을 중첩시키는 연산자
+
+          1) += : 기존값에 더함
+              예) A += 5 와 같은 것은 A = A + 5
+          2) -= : 기존값에 뺌
+              예) A -= 5 와 같은 것은 A = A - 5
+          3) *= : 기존값에 곱함
+              예) A *= 5 와 같은 것은 A = A * 5
+          4) /= : 기존값에 나눔
+              예) A /= 5 와 같은 것은 A = A / 5
+          5) %= : 기존값에 나머지연산함
+              예) A %= 5 와 같은 것은 A = A % 5
+
+            ※ 주의사항 : += 대입연산자는 붙여서 사용할것!
+            (+ = 는 안됨)
+
+          **********************************************/
+
     </script>
     <style>
       body {
