--- a/003.JS학습/JS2-1.변수와연산자.html
+++ b/003.JS학습/JS2-1.변수와연산자.html
@@ -534,30 +534,94 @@
         document.write(`
           <br><br> ♣ 회원정보 ♣ <br>
           1) 회원소속 : ${member} <br>
-                          2) 회원성별 : ${gender2} <br>
-                          3) 회원나이 : ${age2} <br>
-                          4) 회원조건 검증 : <br>
-                          - 카카오 회원입니까? ${member == "카카오"}<br>
-                          - 남자입니까? ${gender2 == "남자"}<br>
-                          - 20살 미만입니까? ${age2 < 20}<br>
-                          - 20살 미만인 남자입니까?
-                          ${age2 < 20 && gender2 == "남자"} <br>
-                          5) 최종결과 : <br>
-                          - 카카오 회원이거나 20미만인 남자입니까?
-                          ${
-                            member == "카카오" ||
-                            (age2 < 20 && gender2 == "남자")
-                          }
-                          <br><br>
-                          `);
+          2) 회원성별 : ${gender2} <br>
+          3) 회원나이 : ${age2} <br>
+          4) 회원조건 검증 : <br>
+            - 카카오 회원입니까? ${member == "카카오"}<br>
+            - 남자입니까? ${gender2 == "남자"}<br>
+            - 20살 미만입니까? ${age2 < 20}<br>
+            - 20살 미만인 남자입니까?
+            ${age2 < 20 && gender2 == "남자"} <br>
+          5) 최종결과 : <br>
+            - 카카오 회원이거나 20미만인 남자입니까?
+            ${member == "카카오" || (age2 < 20 && gender2 == "남자")}
+          <br><br>
+          `);
       }; //showResult2 함수
       showResult2();
-      
+
       member = "네이버";
       gender2 = "남자";
       age2 = 45;
       showResult2();
+
+      //   조건을 바꾸고 버튼을 클릭하면 함수를 호출하도록 버튼 출력하기
+      member = "네이트";
+      gender2 = "남자";
+      age2 = 18;
+      document.write(`
+      <button onclick="showResult2()"style="font-size:30px">
+        네이트/남자/18세
+        </button>
+      `);
+      //   결과적으로 논리합은 조건 중 하나만 true여도 true가 나온다
+
+      // 논리부정 찍어보기
+      var person = "여자";
+      document.write(`<br><br>
+    ★논리부정(!)<br>
+    한 사람의 성별은 ${person}입니다. <br>
+    이 사람의 성별이 여자가 맞으면 false라고 답하세요!
+    ${!person === "여자"}<br><br>
+    `);
+      // 논리부정은 불린(boolean결과를 반대로 뒤집어준다.
+      // 예컨대 조건문에서 false일때 실행해야할 경우 Not연산자로 결과를 반대로 적용되게 한다.
+
+      /******************************************** 
+          7. 조건연산자(삼항연산자)
+            - if문과 유사하게 조건에 맞으면 실행할 수 있는
+            코드를 구분해 주는 연산자다!
+            -> 개발자들이 코드를 줄여쓸때 if문 대신에
+            많이 사용한다! 사랑한다!!!
+            ________________________________
+
+            형식:
+            조건식 ? 실행문1 : 실행문2 ;
+
+            -> 조건식이 true이면 실행문1을 실행하고
+            조건식이 false이면 실행문2를 실행한다!
+
+            예) 비?집:놀이동산;
+            -> 비가오면 집에 있고 / 안오면 놀이동산간다!
+            -> 항목이 3개여서 삼항연산자라고도 함!
+
+        ************************************************/
+      //    오늘의 날씨
+      var today = "비";
+
+      // 결과 변수
+      var result;
+
+      console.log("할당안한 변수값은?", result);
+      // 할당안한 변수는 기본적으로 undefined가 셋팅됨.
+
+      //   함수에 담아봄
+      var showResult3 = function () {
+        today === "비" ? (result = "집에있어요") : (result = "놀이동산가요");
+
+        document.write(`
+            <h1>7. 조건연산자(삼항연산자) : </h1>
+            오늘의 날씨는 어떤가요? ${today} <br>
+            오늘 집에 있을까요? 놀러갈까요? ${result}<br><br>
+    `);
+      }; //showResult3 함수
+      showResult3();
       
+      today='맑음';
+      showResult3();
+
+
+
       document.write(``);
     </script>
     <style>
