--- a/002.CSS학습/06.CSS실험실/02.햄버거버튼.html
+++ b/002.CSS학습/06.CSS실험실/02.햄버거버튼.html
@@ -1,96 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>02. 햄버거버튼 애니메이션</title>
     <style>
-        .hambtn{
-            position: relative;
-            /* 부모자격 : span */
-            width: 400px;
-            height: 250px;
-            margin: 50px auto;
-            outline: 5px dotted lightpink;
+      .hambtn {
+        position: relative;
+        /* 부모자격 : span */
+        width: 400px;
+        height: 250px;
+        margin: 50px auto;
+        outline: 5px dotted lightpink;
 
-            /* 손가락 보이기 */
-            cursor: pointer;
-        }
+        /* 손가락 보이기 */
+        cursor: pointer;
+      }
 
-        /* 햄버거 바 공통 */
-        .hambtn span{
-            position: absolute;
-            width: 100%;
-            height: 50px;
-            background-color: #333;
-            border-radius: 25px;
-        }
-        
-        /* 1번 바 */
-        .hambtn span:nth-child(1){
-            top: 0;
+      /* 햄버거 바 공통 */
+      .hambtn span {
+        position: absolute;
+        width: 100%;
+        height: 50px;
+        background-color: #333;
+        border-radius: 25px;
+      }
 
-            transition: top .3s .3s,
-            transform .3s;
-            /* top값은 .3초대기 후 .3초 애니, transform은 바로 .3초 애니
+      /* 1번 바 */
+      .hambtn span:nth-child(1) {
+        top: 0;
+
+        transition: top 0.3s 0.3s, transform 0.3s;
+        /* top값은 .3초대기 후 .3초 애니, transform은 바로 .3초 애니
             ->회전 후 중앙 이동 */
-        }
-        /* 2번 바 */
-        .hambtn span:nth-child(2){
-            top: 100px;
-            left: 0;
-            /* left 초기값 있어서 애니메이션 됨(기본값 auto) */
+      }
+      /* 2번 바 */
+      .hambtn span:nth-child(2) {
+        top: 100px;
+        left: 0;
+        /* left 초기값 있어서 애니메이션 됨(기본값 auto) */
 
-            transition: .1s .3s;
-        }
-        /* 3번 바 */
-        .hambtn span:nth-child(3){
-            top: 200px;
+        transition: 0.1s 0.3s;
+      }
+      /* 3번 바 */
+      .hambtn span:nth-child(3) {
+        top: 200px;
 
-            transition: top .3s .3s,
-            transform .3s;
-            /* top값은 .3초대기 후 .3초 애니, transform은 바로 .3초 애니
+        transition: top 0.3s 0.3s, transform 0.3s;
+        /* top값은 .3초대기 후 .3초 애니, transform은 바로 .3초 애니
             ->회전 후 중앙 이동 */
+      }
 
-        }
-        
-        /* 상위  메뉴에 클래스 on을 줄 경우 닫기버튼으로 변경하기 */
-        /* 1번 바 */
-        .hambtn.on span:nth-child(1){
-            top: 100px;
-            transform: rotate(45deg);
+      /* 상위  메뉴에 클래스 on을 줄 경우 닫기버튼으로 변경하기 */
+      /* 1번 바 */
+      .hambtn.on span:nth-child(1) {
+        top: 100px;
+        transform: rotate(45deg);
 
-            /* 트랜지션 개별설정 */
-            transition: top .3s,
-            transform .3s .3s;
-            /* top값은 바로 .3초, transform은 .3초 대기 후 .3초 애니
+        /* 트랜지션 개별설정 */
+        transition: top 0.3s, transform 0.3s 0.3s;
+        /* top값은 바로 .3초, transform은 .3초 대기 후 .3초 애니
             ->중앙 이동후 회전함 */
-        }
-        /* 2번 바 */
-        .hambtn.on span:nth-child(2){
-            top: 100px;
-            width: 0%;
-            left: 50%;
-            /* .3초 후 .1초 애니 */
-            transition: .1s .3s;
-        }
-        /* 3번 바 */
-        .hambtn.on span:nth-child(3){
-            top: 100px;
-            transform: rotate(-45deg);
-            transition: top .3s,
-            transform .3s .3s;
-        }
+      }
+      /* 2번 바 */
+      .hambtn.on span:nth-child(2) {
+        top: 100px;
+        width: 0%;
+        left: 50%;
+        /* .3초 후 .1초 애니 */
+        transition: 0.1s 0.3s;
+      }
+      /* 3번 바 */
+      .hambtn.on span:nth-child(3) {
+        top: 100px;
+        transform: rotate(-45deg);
+        transition: top 0.3s, transform 0.3s 0.3s;
+      }
 
-
+      /* 두번째 햄버거 버튼 크기/위치 이동 */
+    .hambtn2 {
+      transform: scale(0.1);
+      transform-origin: right top;
+      position: absolute;
+      top: 2vw;
+      right: 3vw;
+    }
     </style>
-</head>
+  </head>
 
-<body>
-    <div class="hambtn on">
-        <span></span>
-        <span></span>
-        <span></span>
+  <body>
+    <div class="hambtn" onclick="this.classList.toggle('on')">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-</body>
+
+    <div class="hambtn hambtn2" onclick="this.classList.toggle('on')">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <!-- 
+    onclick="this.classList.toggle('on')"
+      - this -> 햄버거 버튼 자신(.hambtn)
+      - classList -> 클래스를 제어하는 객체
+      - toggle(클래스 명) -> 설정한 클래스가 없으면 넣고 있으면 빼는 메서드 -->
+  </body>
 </html>
