--- a/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001. HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CGV에 오신 것을 환영합니다!</title>
+    <!-- 폰트어썸 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
     <link rel="stylesheet" href="./css/main.css" />
+
     <!-- 메인 JS 불러오기 -->
     <script src="./js/main.js" defer></script>
     <!-- 자바스크립트 코드 구역 -->
@@ -94,7 +98,7 @@
         <!-- 영사기 박스 -->
         <aside class="cam">
           <!-- 영사기 이미지 -->
-          <img src="./images/gnb.png" alt="영사기">
+          <img src="./images/gnb.png" alt="영사기" />
           <!-- 빔 박스 -->
           <div class="beam"></div>
         </aside>
@@ -198,6 +202,44 @@
       </nav>
     </main>
     <!-- 3.하단영역 -->
-    <footer class="footer-area part"></footer>
+    <footer class="footer-area part">
+      <!-- 3-1.하단로고 -->
+      <div class="logo">
+        <img src="./images/blogo.png" alt="하단로고" />
+      </div>
+      <!-- 3-2.회사 정보 -->
+      <div class="co-info">
+        <address>
+          (04377)서울특별시 용산구 한강대로 23길 55, 아이파크몰 6층(한강로동)
+          <br />
+          대표이사 : 최병환사업자등록번호 : 104-81-45690통신판매업신고번호 :
+          2017-서울용산-0662 
+          <br />
+          개인정보보호 책임자 : 정종민대표이메일 : cjcgvmaster@cj.netCGV고객센터
+          : 1544-1122
+        </address>
+      </div>
+      <!-- 3-3.SNS -->
+      <div class="sns-box">
+        <ol>
+          <!-- 페이스북 -->
+          <li>
+            <a href="#" class="fa-brands fa-square-facebook"></a>
+          </li>
+          <!-- 트위터 -->
+          <li>
+            <a href="#" class="fa-brands fa-square-x-twitter"></a>
+          </li>
+          <!-- 인스타그램 -->
+          <li>
+            <a href="#" class="fa-brands fa-square-instagram"></a>
+          </li>
+          <!-- 유튜브 -->
+          <li>
+            <a href="#" class="fa-brands fa-youtube"></a>
+          </li>
+        </ol>
+      </div>
+    </footer>
   </body>
 </html>
