--- a/003.JS학습/01.JS실험실/04.스크롤액션.html
+++ b/003.JS학습/01.JS실험실/04.스크롤액션.html
@@ -8,16 +8,16 @@
     <!-- 외부CSS -->
     <link rel="stylesheet" href="./css/scroll_action.css" />
     <!-- 부드러운 스크롤JS -->
-    <script src="./js/smoothScroll23.js"></script>
+    <!-- <script src="./js/smoothScroll23.js"></script> -->
     <!-- 외부JS -->
     <script src="./js/scroll_action.js" defer></script>
   </head>
   <body>
     <!-- 타이틀 -->
     <h1 class="tit stage"></h1>
-    <div class="scroll-act sa1"></div>
-    <div class="scroll-act sa2"></div>
-    <div class="scroll-act sa3"></div>
+    <div class="scroll-act sa1 set-it1 hide-el"></div>
+    <div class="scroll-act sa2 set-it1 hide-el"></div>
+    <div class="scroll-act sa3 set-it1 hide-el"></div>
 
     <!-- 떨어지는여자 -->
     <img src="./images/woman.png" alt="떨녀" id="woman" />
