--- a/002.CSS학습/03.DisplayGrid/grid1_gallery.html
+++ b/002.CSS학습/03.DisplayGrid/grid1_gallery.html
@@ -71,9 +71,42 @@
 
             ---------------------------------------
             1. 가로사이즈 단위를 띄어쓰기로 나열하면 개수만큼 그 크기의 세로 컬럼이 생성됨
-         ******************************************************/
-         grid-template-columns: 100px 200px 300px 400px;
-    }
+                (auto는 나머지 채우기)
+                예) grid-template-columns: 100px 200px auto 400px;
+
+            2. fr 단위로 가로 전체를 기준하여 비율을 설정한 컬럼이 생성됨
+                fr은 fraction(부분) 단어에서 유래
+                예) grid-template-columns: 1fr 3fr 1fr 5fr;
+            
+            3. repeat(수치의 반복수, 반복수치)
+                -> 반복수 * 반복수 수치개수 (컬럼수)
+                예) grid-template-columns: repeat(3,100px 1fr); <<<100px 1fr를 세번 반복
+                  -> 단순하게 사용할 경우 repeat(컬럼수, 1fr);
+                     예) grid-template-columns: repeat(5, 1fr);
+        ******************************************************/
+
+        grid-template-columns: repeat(5, 1fr);
+
+        /****************************************************** 
+        [  그리드 템플릿 ]
+            grid-template-columns
+
+            ---------------------------------------
+            1. 가로사이즈 단위를 띄어쓰기로 나열하면 개수만큼 그 크기의 세로 컬럼이 생성됨
+                (auto는 나머지 채우기)
+                예) grid-template-columns: 100px 200px auto 400px;
+
+            2. fr 단위로 가로 전체를 기준하여 비율을 설정한 컬럼이 생성됨
+                fr은 fraction(부분) 단어에서 유래
+                예) grid-template-columns: 1fr 3fr 1fr 5fr;
+            
+            3. repeat(수치의 반복수, 반복수치)
+                -> 반복수 * 반복수 수치개수 (컬럼수)
+                예) grid-template-columns: repeat(3,100px 1fr); <<<100px 1fr를 세번 반복
+                  -> 단순하게 사용할 경우 repeat(컬럼수, 1fr);
+                     예) grid-template-columns: repeat(5, 1fr);
+        ******************************************************/
+        }
 
 
     /* 그리드 각 박스 공통 */
