--- a/002.CSS학습/03.DisplayGrid/grid1_gallery.html
+++ b/002.CSS학습/03.DisplayGrid/grid1_gallery.html
@@ -88,24 +88,28 @@
         grid-template-columns: repeat(5, 1fr);
 
         /****************************************************** 
-        [  그리드 템플릿 ]
-            grid-template-columns
+        [ 세로 그리드 템플릿 ]
+            grid-template-rows
 
             ---------------------------------------
-            1. 가로사이즈 단위를 띄어쓰기로 나열하면 개수만큼 그 크기의 세로 컬럼이 생성됨
-                (auto는 나머지 채우기)
-                예) grid-template-columns: 100px 200px auto 400px;
+            1. 구체적인 수치를 나열하면 나열한 개수만큼 그 수치로 세팅됨
+               나머지 row는 자동(auto)임!
+                예) grid-template-rows: 100px auto 300px;
 
-            2. fr 단위로 가로 전체를 기준하여 비율을 설정한 컬럼이 생성됨
-                fr은 fraction(부분) 단어에서 유래
-                예) grid-template-columns: 1fr 3fr 1fr 5fr;
+            2. fr단위를 써서 나열하면 비를 쓴만큼 높이값 전체에서의 비로 세팅됨
+                예) grid-template-rows: 1fr 3fr 2fr;
             
             3. repeat(수치의 반복수, 반복수치)
-                -> 반복수 * 반복수 수치개수 (컬럼수)
-                예) grid-template-columns: repeat(3,100px 1fr); <<<100px 1fr를 세번 반복
-                  -> 단순하게 사용할 경우 repeat(컬럼수, 1fr);
-                     예) grid-template-columns: repeat(5, 1fr);
+                -> column과 비슷하나 다른이유는 column은 설정된 것만 column으로 올라오므로 남는 것이 없고,
+                   row는 설정외 남는 항목이 있을 수 있다.(나머지는 auto)
+                예) grid-template-rows: repeat(4,300px);
+                    grid-template-rows: repeat(4,300px 200px);
+            
+            4. 모든 높이값 동일하게 세팅하기
+               grid-auto-rows : 특정값
+               예) grid-auto-rows: 300px;
         ******************************************************/
+
         }
 
 
