--- a/003.JS학습/JS7-2.데이터가공_숫자.html
+++ b/003.JS학습/JS7-2.데이터가공_숫자.html
@@ -14,8 +14,10 @@
        let num2 = "2"; // 문자형 숫자
 
        let res1 = num1 + num2;
-
        console.log("문자형숫자 더하기:\n",res1);
+
+       let res2 =Number(num1) + Number(num2);
+       console.log("문자형숫자 숫자형 변환 후 더하기:\n",res2);
 
 
         /*********************************************************** 
@@ -28,9 +30,9 @@
         let nan2 = 59; // 숫자
         let nan3 = "22mynum"; // 문자
 
-        // console.log("문자형숫자는 숫자가 아닌가? \n",isNaN(nan1));
-        // console.log("숫자는 숫자가 아닌가? \n",isNaN(nan2));
-        // console.log("문자는 숫자가 아닌가? \n",isNaN(nan3));
+        console.log("문자형숫자는 숫자가 아닌가? \n",isNaN(nan1));
+        console.log("숫자는 숫자가 아닌가? \n",isNaN(nan2));
+        console.log("문자는 숫자가 아닌가? \n",isNaN(nan3));
 
         /************************************************************* 
              3. 숫자추출(숫자형변환)
@@ -53,17 +55,20 @@
 
        // 결과
        let parse1 = pa1 + pa2;
+       let parse2 = parseInt(pa1) + parseInt(pa2);
 
        console.log("단위가 있는 숫자 더하기: \n", parse1);
+       console.log("단위가 있는 숫자 변환하서 더하기: \n", parse2);
         
 
         /************************************************* 
             4. 문자로된 숫자계산식을 실제로 계산하기
-            - 문자식을 xx해주면 실제로 계산한다!
+            - 문자식을 이발해주면 실제로 계산한다!
             - 
         *************************************************/
        let temp = "3*8+35/5";
        console.log("문자계산식: ",temp);
+       console.log("이발계산식: ",eval(temp));
        
     </script>
 </head>
