--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/01.태그선택자(실습).html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/01.태그선택자(실습).html
@@ -82,7 +82,29 @@
         // 0.5초간 left값 변경 애니
         .animate({left:'300px'},500)
         // .animate({},시간(1/1000),이징,함수)
+
+        ////클릭시 이벤트 세팅하기////
+        $('.list li span').mouseover((e)=>{
+          // 자기자신
+          let ele=e.currentTarget;
+          console.log('마우스오버',ele,$(ele).text(),$(ele).parent().index());
+          // text() - 태그 데이터 읽기/쓰기
+          // parent() - 부모요소로 올라감
+          // index() - 같은 형제요소의 순번(0부터)
+
+          // 오버된 span의 부모인 li순번
+          let seq=$(ele).parent().index();
+
+          // 글자변경하기
+          $(ele).text(arrText[seq]);
+          // 글자색변경하기
+          $(ele).css({color:arrColor[seq]});
+        });////////마우스오버////////////
       });/////////////click////////////////
+
+      const arrText=["나는","프론트엔드","개발자다"];
+      const arrColor=["red","blue","green"];
+
     });
 			
 	
@@ -105,9 +127,9 @@
 
  <nav>
    <ul class="list">
-   <li id="first">One</li>
-   <li id="second">Two</li>
-   <li id="third">Three</li>
+   <li id="first"><span>One</span></li>
+   <li id="second"><span>Two</span></li>
+   <li id="third"><span>Three</span></li>
   </ul>
  </nav>
 
