--- a/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/01.태그선택자(실습).html
+++ b/005.jQuery학습/001.기본사용법/002.선택자메서드연습/jQuery-01.선택자연습/01.태그선택자(실습).html
@@ -87,6 +87,8 @@
         $('.list li span').mouseover((e)=>{
           // 자기자신
           let ele=e.currentTarget;
+
+          console.log('ele뭐야',ele);
           console.log('마우스오버',ele,$(ele).text(),$(ele).parent().index());
           // text() - 태그 데이터 읽기/쓰기
           // parent() - 부모요소로 올라감
